--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- create a form to accept user input -->
                 <form class="m-2">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Movie</label>
+                        <label for="movieForm">Movie</label>
                         <input class="form-control" id="movieForm" placeholder="Pick a movie">
                     </div>
                     <button type="button" class="btn btn-secondary" id="submitButton">Submit</button>
